--- a/view/vue_accueil.html
+++ b/view/vue_accueil.html
@@ -13,7 +13,7 @@
     </ul>
     <h2>Quelques idées de styles :</h2>
 
-<marquee hspace="80%" align="center" height="130" scrolldelay="10" scrollamount="4" onmouseout="this.start()" onmouseover="this.stop()"> <p><img width="300" border="0" src="../Pictures/gris.png" alt="" hspace="0"><img width="300" border="0" src="../Pictures/gris2.png" alt="" hspace="0"><img width="300" border="0" src="../Pictures/marron.png" alt="" hspace="0"></p></marquee>
+<marquee hspace="80%" align="center" height="130" scrolldelay="10" scrollamount="4" onmouseout="this.start()" onmouseover="this.stop()"> <p><img width="300" border="0" src="img/vetement/homme/tee/bleu.png" alt="" hspace="0"><img width="300" border="0" src="img/vetement/homme/chaussures/gris.png" alt="" hspace="0"><img width="300" border="0" src="img/vetement/homme/cravate/marron.png" alt="" hspace="0"></p></marquee>
 
     <div id="flexPromo">
       <h2>En ce moment :</h2>
