Retouche acceuil et ajout css produit

--- a/view/vue_produit.html
+++ b/view/vue_produit.html
@@ -8,10 +8,18 @@
   <body>
     <h1>Color 9</h1>
 
-    <img src="img/vetement/femme/sweat/jaune.png" alt="">
+    <img src="img/vetement/femme/sweat/jaune.png" width="700" height="700">
 
 
-    <h2>Nom du produit</h2>
+
+    <div class="txt">
+      <h2>Nom du produit</h2>
+      <p>Description du produit <br>
+      Tailles disponibles : <br>
+      <br>
+      Prix : </p>
+    </div>
+
 
   </body>
 </html>
