--- a/view/style/style_accueil.css
+++ b/view/style/style_accueil.css
@@ -1,15 +1,16 @@
 #flexPromo{
   width: 50%;
-  margin-top: 20%;
+  margin-top: 350px;
 }
 
 .elemPromo{
-  margin-left: 8%;
+  margin-left: 40px;
 }
 
 marquee{
-  width: 600px;
-  margin: auto;
+  width: 60%;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 
 /* li{
@@ -41,4 +42,33 @@ ul li a {
 ul li a:hover {
  background-color:#D3D3D3;
  border-color:#696969 #DCDCDC #DCDCDC #696969;
+ }
+
+ #menu-deroulant, #menu-deroulant ul {
+     padding: 0;
+     margin: 0;
+     list-style: none;
+ }
+
+ #menu-deroulant li {
+     display: inline-block;
+ }
+ #menu-deroulant ul li {
+     display: inherit;
+ }
+ #menu-deroulant a {
+     text-decoration: none;
+     display: block;
+ 	color:#000;
+ }
+ #menu-deroulant ul {
+     position: absolute;
+ /* on cache les sous menus complètement sur la gauche */
+     left: -999em;
+     text-align: left;
+     z-index: 1000;
+ }
+ #menu-deroulant li:hover ul {
+ /* Au survol des li du menu on replace les sous menus */
+     left: auto;
  }
