--- a/view/vue_accueil.html
+++ b/view/vue_accueil.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style/style_accueil.css">
   </head>
   <body>
-    <h1>Color 9</h1>
+    <img id="Logo" src="img/Color9.png">
 
-    <ul id="menu-deroulant">
-      <li><a href="#">Femme</a></li>
-        <ul>
+    <ul id="Niveau1">
+      <li><b>Femme</b>
+        <ul class="Niveau2">
           <li><a href="#">Bonnet</a></li>
           <li><a href="#">Chaussures</a></li>
           <li><a href="#">Gants</a></li>
@@ -19,9 +19,10 @@
           <li><a href="#">Robe</a></li>
           <li><a href="#">Sweat</a></li>
           <li><a href="#">T-Shirt</a></li>
+        </li>
         </ul>
-      <li><a href="#">Homme</a></li>
-        <ul>
+      <li><b>Homme</b>
+        <ul class="Niveau2">
           <li><a href="#">Bonnet</a></li>
           <li><a href="#">Chaussures</a></li>
           <li><a href='#'>Cravate</a></li>
@@ -30,13 +31,14 @@
           <li><a href="#">Short</a> </li>
           <li><a href="#">Sweat</a></li>
           <li><a href="#">T-Shirt</a></li>
+        </li>
         </ul>
     </ul>
 
     <h2>Quelques idées de styles :</h2>
 
 <marquee hspace="80%" align="center" height="130" scrolldelay="10" scrollamount="4" onmouseout="this.start()" onmouseover="this.stop()"> <p><a href="http://www.google.com"><img width="300" border="0" src="img/vetement/homme/tee/bleu.png" alt="" hspace="0"></a>
-  <a href="http://www.google.com"><img width="300" border="0" src="img/vetement/homme/chaussures/gris.png" alt="" hspace="0"></a>g
+  <a href="http://www.google.com"><img width="300" border="0" src="img/vetement/homme/chaussures/gris.png" alt="" hspace="0"></a>
     <a href="http://www.google.com"><img width="300" border="0" src="img/vetement/homme/cravate/marron.png" alt="" hspace="0"></a></p></marquee>
 
     <div id="flexPromo">
