--- a/view/vue_accueil.html
+++ b/view/vue_accueil.html
@@ -37,7 +37,7 @@
 
     <h2>Quelques idées de styles :</h2>
 
-<marquee hspace="80%" align="center" height="130" scrolldelay="10" scrollamount="4" onmouseout="this.start()" onmouseover="this.stop()"> <p><a href="http://www.google.com"><img width="300" border="0" src="img/vetement/homme/tee/bleu.png" alt="" hspace="0"></a>
+<marquee hspace="80%" align="center" scrolldelay="10" scrollamount="4" onmouseout="this.start()" onmouseover="this.stop()"> <p><a href="http://www.google.com"><img width="300" border="0" src="img/vetement/homme/tee/bleu.png" alt="" hspace="0"></a>
   <a href="http://www.google.com"><img width="300" border="0" src="img/vetement/homme/chaussures/gris.png" alt="" hspace="0"></a>
     <a href="http://www.google.com"><img width="300" border="0" src="img/vetement/homme/cravate/marron.png" alt="" hspace="0"></a></p></marquee>
 
