Début vue modification

--- a/view/vue_type_produit.html
+++ b/view/vue_type_produit.html
@@ -2,6 +2,7 @@
 <html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style/style_type_produit.css">
     <title>Color 9</title>
   </head>
   <body>
