Nouvelle maj des vues.

--- a/view/vue_ajout.html
+++ b/view/vue_ajout.html
@@ -2,7 +2,7 @@
 <html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style/style_modification.css">
+    <link rel="stylesheet" href="style/style_ajout.css">
     <title></title>
 
   </head>
@@ -12,7 +12,7 @@
 
     <h1>Ajout d'un nouveau produit :</h1>
 
-    <form action="../controller/upload.php" method="post" enctype="multipart/form-data">
+    <form action="../controller/ajout.php" method="post" enctype="multipart/form-data">
       <p>
         Entrez sa catégorie :
         <input type="text" name="categorie" value="chemise" autofocus required> <br>
