--- a/view/vue_accueil.html
+++ b/view/vue_accueil.html
@@ -60,5 +60,6 @@
         <p>Titre - prix avec reduc</p>
       </div>
     </div>
+    <footer><a href="#">Connexion admin</a> </footer>
   </body>
 </html>
