--- a/view/style/style.css
+++ b/view/style/style.css
@@ -12,7 +12,7 @@ a {
 
 header {
   width: 100%;
-  height: 20%;
+  height: 15%;
   position: fixed;
   background-color: #E5E5E5;
   top: 0;
@@ -21,8 +21,9 @@ header {
 }
 
 header img.logo_marque {
-  width: 12%;
+  width: 10%;
   display: block;
+  margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -69,7 +70,7 @@ header nav ul {
 header nav li{
   list-style-type: none;
   padding : 10px 30px;
-  font-size: 34px;
+  font-size: 27px;
 }
 
 header nav li:hover{
@@ -77,7 +78,7 @@ header nav li:hover{
 }
 
 div.mainbody {
-  margin-top: 12%;
+  margin-top: 15%;
 }
 
 div#contener_sexe_accueil {
@@ -144,6 +145,11 @@ h3.nom_produit, span.prix {
   text-align: center;
 }
 
+span.prix {
+  font-size: 25px;
+  font-weight: bold;
+}
+
 h2.nom_categorie {
   margin-top: 5%;
   margin-left: 20%;
@@ -154,8 +160,7 @@ nav.tri_filtre {
   width: 15%;
   position: fixed;
   left: 0;
-  top:20%;
+  top:15%;
   height: 100%;
-  padding-top: 15%;
   background-color: #C1C1C1;
 }
