--- a/view/style/style.css
+++ b/view/style/style.css
@@ -17,7 +17,7 @@ header {
   background-color: #E5E5E5;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 5;
 }
 
 header img.logo_marque {
@@ -71,10 +71,13 @@ header nav li{
   list-style-type: none;
   padding : 10px 30px;
   font-size: 27px;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
 }
 
 header nav li:hover{
   background-color: #D3D3D3;
+  color: black;
 }
 
 div.mainbody {
@@ -97,6 +100,7 @@ div#contener_sexe_accueil img.mannequin {
 
 div#contener_sexe_accueil img.mannequin:hover {
   transform: scale(1.2);
+  -webkit-transform: scale(1.2);
   z-index: 0;
 }
 
@@ -106,15 +110,20 @@ div.conteneur_mannequin {
 
 a img.mannequin {
   transition: all .4s ease-in;
+  -webkit-transition: all .4s ease-in;
 }
 
 a img.mannequin:hover {
   transform: scale(1.1);
+  -webkit-transform: scale(1.1);
   z-index: 0;
 }
 
 img.mannequin {
-  width: 300px;
+  width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 footer {
@@ -156,11 +165,143 @@ h2.nom_categorie {
   font-size: 50px;
 }
 
-nav.tri_filtre {
+div.form_filtre {
   width: 15%;
-  position: fixed;
+  position: absolute;
   left: 0;
   top:15%;
-  height: 100%;
   background-color: #C1C1C1;
+  padding: 30px 14px;
+  max-width: 550px;
+  font-size: 18px;
+  margin-bottom: 1000px;
+}
+
+label.titre {
+  font-size: 27px;
+}
+
+
+
+
+
+
+
+
+
+/* DESIGN CHECKBOX PAR Buddy Reno (https://codepen.io/BuddyLReno/pen/boGRPO?editors=0100) */
+
+.inputGroup {
+  background-color: #c1c1c1;
+  display: block;
+  margin: 10px 0;
+  position: relative;
+}
+.inputGroup label {
+  padding: 12px 30px;
+  width: 100%;
+  display: block;
+  text-align: left;
+  color: #3c454c;
+  cursor: pointer;
+  position: relative;
+  z-index: 2;
+  transition: color 200ms ease-in;
+  overflow: hidden;
+}
+.inputGroup label:before {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  content: "";
+  background-color: #4C64FF;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%) scale3d(1, 1, 1);
+          transform: translate(-50%, -50%) scale3d(1, 1, 1);
+  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  z-index: -1;
+}
+.inputGroup label:after {
+  width: 32px;
+  height: 32px;
+  content: "";
+  border: 2px solid #d1d7dc;
+  background-color: #fff;
+  background-image: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E ");
+  background-repeat: no-repeat;
+  background-position: 2px 3px;
+  border-radius: 50%;
+  z-index: 2;
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  cursor: pointer;
+  transition: all 200ms ease-in;
+}
+.inputGroup input:checked ~ label {
+  color: #fff;
+}
+.inputGroup input:checked ~ label:before {
+  -webkit-transform: translate(-50%, -50%) scale3d(56, 56, 1);
+          transform: translate(-50%, -50%) scale3d(56, 56, 1);
+  opacity: 1;
+}
+.inputGroup input:checked ~ label:after {
+  background-color: #54e0c7;
+  border-color: #54e0c7;
+}
+.inputGroup input {
+  width: 32px;
+  height: 32px;
+  order: 1;
+  z-index: 2;
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  cursor: pointer;
+  visibility: hidden;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+code {
+  background-color: #9aa3ac;
+  padding: 0 8px;
+}
+
+
+/* DESIGN BUTTON W3SCHOOLS (https://www.w3schools.com/css/tryit.asp?filename=trycss_buttons_shadow)*/
+
+form button {
+    background-color: #4C64FF;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+    margin: 10px auto;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+}
+
+form button:hover {
+    background-color:#2845FF;
 }
