--- a/view/style/style_suppression.css
+++ b/view/style/style_suppression.css
@@ -6,7 +6,9 @@
 }
 
 body{
-  font-size: 2em;
+    font-size: 2em;
+    color: #333333;
+    font-family: 'Lobster', cursive;
 }
 
 #BoutonValider{
@@ -15,4 +17,26 @@ body{
   font-size: 14px;
   font-weight: bold;
   background-color: #CCCCCC
+}
+
+header img.logo_marque {
+  width: 10%;
+  display: block;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+header {
+  width: 100%;
+  height: 15%;
+  position: fixed;
+  background-color: #E5E5E5;
+  top: 0;
+  left: 0;
+  z-index: 5;
+}
+
+h1{
+  padding-top: 160px;
 }
